# cmakeCpp

./: README.md
resources/: CMakeLists.txt
src/: hh.cpp  hh.h  main.cpp
